--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: shell
 os: windows
 
 script:
-  - echo hello
+  - powershell Invoke-WebRequest http://raw.github.com/krlmlr/r-appveyor/master/scripts/appveyor-tool.ps1 -OutFile "..\appveyor-tool.ps1"
+  - powershell Import-Module '..\appveyor-tool.ps1'
