--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: shell
 os: windows
 
-
-
 script:
+  # install R
   - wget "https://cloud.r-project.org/bin/windows/base/R-win.exe"
   - powershell 'Start-Process -FilePath ..\R-win.exe -ArgumentList "/VERYSILENT /DIR=C:\R" -NoNewWindow -Wait'
+  # install Rtools
+  - wget "https://cloud.r-project.org/bin/windows/Rtools/Rtools35.exe"
+  - powershell 'Start-Process -FilePath ..\Rtools35.exe -ArgumentList /VERYSILENT -NoNewWindow -Wait'
