--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ os: windows
 script:
   # install R
   - curl -s -o "R-win.exe" "https://cloud.r-project.org/bin/windows/base/R-3.5.1-win.exe"
-  - powershell 'Start-Process -FilePath ..\R-win.exe -ArgumentList "/VERYSILENT /DIR=C:\R" -NoNewWindow -Wait'
+  - powershell 'Start-Process -FilePath .\R-win.exe -ArgumentList "/VERYSILENT /DIR=C:\R" -NoNewWindow -Wait'
   # install Rtools
   - curl -s -o "Rtools.exe" "https://cloud.r-project.org/bin/windows/Rtools/Rtools35.exe"
-  - powershell 'Start-Process -FilePath ..\Rtools.exe -ArgumentList /VERYSILENT -NoNewWindow -Wait'
+  - powershell 'Start-Process -FilePath .\Rtools.exe -ArgumentList /VERYSILENT -NoNewWindow -Wait'
