--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ script:
   # install Rtools
   - curl -s -o "Rtools.exe" "https://cloud.r-project.org/bin/windows/Rtools/Rtools35.exe"
   - powershell 'Start-Process -FilePath .\Rtools.exe -ArgumentList /VERYSILENT -NoNewWindow -Wait'
+  # install ICU
+  - /c/msys64/usr/bin/pacman.exe -Sy mingw-w64-x86_64-icu
