--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ os: windows
 
 script:
   # install ICU
-  - powershell 'Start-Process -FilePath C:\msys64\usr\bin\pacman.exe -ArgumentList "-Sy mingw-w64-x86_64-icu"'
+  - powershell 'Start-Process -FilePath C:\\msys64\\usr\\bin\\pacman.exe -ArgumentList "-Sy mingw-w64-x86_64-icu"'
   # install R
   - curl -s -o "R-win.exe" "https://cloud.r-project.org/bin/windows/base/R-3.5.1-win.exe"
-  - powershell 'Start-Process -FilePath .\R-win.exe -ArgumentList "/VERYSILENT /DIR=C:\R" -NoNewWindow -Wait'
+  - powershell 'Start-Process -FilePath .\\R-win.exe -ArgumentList "/VERYSILENT /DIR=C:\\R" -NoNewWindow -Wait'
   # install Rtools
   - curl -s -o "Rtools.exe" "https://cloud.r-project.org/bin/windows/Rtools/Rtools35.exe"
-  - powershell 'Start-Process -FilePath .\Rtools.exe -ArgumentList /VERYSILENT -NoNewWindow -Wait'
+  - powershell 'Start-Process -FilePath .\\Rtools.exe -ArgumentList /VERYSILENT -NoNewWindow -Wait'
